Rework of HTML redirect

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=http://www.eryaf.com/" />
-  </head>
 
-  <body>
-    <p><a href="http://www.eryaf.com/">Redirect</a></p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Redirecting to http://eryaf.com</title>
+  <meta http-equiv="refresh" content="0; url=http://www.eryaf.com/" />
+  <link rel="canonical" href="https://eryaf.com/">
+</head>
+
+<body>
+  <p><a href="http://www.eryaf.com/">Redirecting to http://eryaf.com...</a></p>
+</body>
+
 </html>
